--- a/_config.yml
+++ b/_config.yml
@@ -20,6 +20,11 @@ author :
   twitter : richlitt
 #  feedburner : feedname
 
+collections:
+  faculty:
+    output: true
+    permalink: /faculty/:path/
+
 # The production_url is only used when full-domain names are needed
 # such as sitemap.txt 
 # Most places will/should use BASE_PATH to make the urls
