Shift to cc-by-sa 4.0

--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ author :
   name : Richard Littauer
   email : admin@british-research-in.eu
 #  github : RichardLitt
-  twitter : @ukresearchineu
+  twitter : "@ukresearchineu"
 #  feedburner : feedname
 
 collections:
